# ciffy

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
ciffy/: main.py
tests/: 3SKW.cif  9GCM.cif  profile.py  test.py
