[tool.poetry]
name = "ciffy"
description = ""
authors = ["Hamish M. Blair <hmblair@stanford.edu>"]
license = "CC BY-NC 4.0"
readme = "README.md"
homepage = "https://github.com/hmblair/ciffy"
repository = "https://github.com/hmblair/ciffy"
packages = [{include = "ciffy"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "poetry",
    "numpy>=1.21.0"
]
build-backend = "setuptools.build_meta"
