[project]
name = "ciffy"
version = "0.1.1"

[tool.poetry]
description = "Load cif files in a jiffy"
authors = ["Hamish M. Blair <hmblair@stanford.edu>"]
license = "CC BY-NC 4.0"
readme = "README.md"
homepage = "https://github.com/hmblair/ciffy"
repository = "https://github.com/hmblair/ciffy"
packages = [{include = "ciffy"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"

[tool.poetry.group.build.dependencies]
setuptools = "^80.9.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
